--- a/Inventory.html
+++ b/Inventory.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="row pt-5 form-control-lg mt-3 ml-0">
-      <form method="post" onsubmit="return handleFormSubmit(this, 'http://localhost:9000/armour')">
+      <form method="post" onsubmit="return handleFormSubmit(this, 'http://35.189.78.116:9000/armour')">
         <div class="col">
           <p>Item Type</p>
           <select id="charClass" class="form-control form-control-lg mb-1">
