moved inventory html to index

--- a/Titan.html
+++ b/Titan.html
@@ -22,7 +22,7 @@
                 aria-expanded="false">
                 Select Class
             </button>
-            <a class="btn btn-secondary" role="button" href="Inventory.html">Inventory Manager</a>
+            <a class="btn btn-secondary" role="button" href="index.html">Inventory Manager</a>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="Titan.html">Titan</a>
                 <a class="dropdown-item" href="Warlock.html">Warlock</a>
