changed urls for new backend

--- a/Titan.html
+++ b/Titan.html
@@ -52,7 +52,7 @@
                 </select>
             </div>
 
-            <form method="post" onsubmit="return loadoutFormSubmit(this,'http://35.189.78.116:9000/loadout')">
+            <form method="post" onsubmit="return loadoutFormSubmit(this,'http://35.189.78.116:9000/loadout/')">
                 <div class="col">
                     <h2>Create Loadout</h2>
                     <p>Helmet</p>
