--- a/Titan.html
+++ b/Titan.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body onload="return loadoutForm(), populateLoadout()">
+<body onload="return loadoutForm(), populateLoadouts(), populateLoadoutDropdown()">
     <div class="container">
         <h1>Titan</h1>
         <div class="dropdown">
@@ -29,14 +29,18 @@
                 <a class="dropdown-item" href="Hunter.html">Hunter</a>
             </div>
         </div>
+
         <div class="row pt-2">
-            <div class="col">
+            <div class="row col-xl-12">
                 <table class="table table-dark pt-2" id="table">
                     <thead>
                         <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Item Name</th>
-                            <th scope="col">Item Type</th>
+                            <th scope="col">Loadout Number</th>
+                            <th scope="col">Helmet</th>
+                            <th scope="col">Arms</th>
+                            <th scope="col">Chest</th>
+                            <th scope="col">Legs</th>
+                            <th scope="col">Mark</th>
                             <th scope="col">Light Level</th>
                         </tr>
                     </thead>
@@ -45,16 +49,21 @@
                 </table>
             </div>
 
-            <div class="row pt-4 form-control-lg mb-2 ml-0">
+            <div class="row col-md-12">
+            <div class="row d-flex pt-4 pb-5 form-control-lg mb-2 ml-0">
                 <p class="form-control-lg">Select Item</p>
                 <select id="loadoutDropdown" class="dropdown-toggle form-control-lg">
                       <option value="n">Create New Item</option>
                 </select>
             </div>
+            </div>
 
-            <form method="post" onsubmit="return loadoutFormSubmit(this,'http://35.189.78.116:9000/loadout/')">
-                <div class="col">
+            <div class="row col-md-12 pt-5">
+                <div class="col-12">
                     <h2>Create Loadout</h2>
+                </div>
+            <form method="post" onsubmit="return loadoutFormSubmit(this,'http://35.189.78.116:9000/loadout/')">
+                <div class="pt-4 form-control ml-0">
                     <p>Helmet</p>
                     <select type="number" id="helmetId" class="form-control form-control-lg">
                     </select>
@@ -68,11 +77,12 @@
                     <select type="number" id="legId" class="form-control form-control-lg">
                     </select>
                     <p>Mark</p>
-                    <select type="number" id="markId" class="form-control form-control-lg">
+                    <select type="number" id="markId" class="form-control form-control-lg mb-2">
                     </select>
                     <button type="submit" class="btn btn-outline-success col-12" id="submit">Submit</button>
                 </div>
             </form>
+            </div>
         </div>
     </div>
 
