--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <th scope="col">Light Level</th>
             <th scope="col">Slot</th>
             <th scope="col">Class</th>
-            <th scope="col">Loadout</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody id="invTable">
