--- a/Warlock.html
+++ b/Warlock.html
@@ -7,37 +7,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
 
     <title>Warlock</title>
+
 </head>
 
-<body>
-    <h1>Warlock</h1>
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="class-selector" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Select Class
-        </button>
-        <a class="btn btn-secondary" role="button" href="Inventory.html">Inventory Manager</a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="Titan.html">Titan</a>
-            <a class="dropdown-item" href="Warlock.html">Warlock</a>
-            <a class="dropdown-item" href="Hunter.html">Hunter</a>
+<body onload="return loadoutForm(), populateLoadouts(), populateLoadoutDropdown()">
+    <div class="container">
+        <h1>Warlock</h1>
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="class-selector" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                Select Class
+            </button>
+            <a class="btn btn-secondary" role="button" href="index.html">Inventory Manager</a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="Titan.html">Titan</a>
+                <a class="dropdown-item" href="Warlock.html">Warlock</a>
+                <a class="dropdown-item" href="Hunter.html">Hunter</a>
+            </div>
+        </div>
+
+        <div class="row pt-2">
+            <div class="row col-xl-12">
+                <table class="table table-dark pt-2" id="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Loadout Number</th>
+                            <th scope="col">Helmet</th>
+                            <th scope="col">Arms</th>
+                            <th scope="col">Chest</th>
+                            <th scope="col">Legs</th>
+                            <th scope="col">Mark</th>
+                            <th scope="col">Light Level</th>
+                            <th scope="col">Delete</th>
+                        </tr>
+                    </thead>
+                    <tbody id="loadoutTable">
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="row col-md-12">
+            <div class="row d-flex pt-4 pb-5 form-control-lg mb-2 ml-0">
+                <p class="form-control-lg">Select Item</p>
+                <select id="loadoutDropdown" class="dropdown-toggle form-control-lg">
+                      <option value="n">Create New Item</option>
+                </select>
+            </div>
+            </div>
+
+            <div class="row col-md-12 pt-5">
+                <div class="col-12">
+                    <h2>Create Loadout</h2>
+                </div>
+            <div>
+                <form method="post" onsubmit="return loadoutFormSubmit(this,'http://35.189.78.116:9000/loadout/')">
+                    <p>Helmet</p>
+                    <select type="number" id="helmetId" class="form-control form-control-lg">
+                    </select>
+                    <p>Arms</p>
+                    <select type="number" id="armId" class="form-control form-control-lg">
+                    </select>
+                    <p>Chest</p>
+                    <select type="number" id="chestId" class="form-control form-control-lg">
+                    </select>
+                    <p>Legs</p>
+                    <select type="number" id="legId" class="form-control form-control-lg">
+                    </select>
+                    <p>Mark</p>
+                    <select type="number" id="markId" class="form-control form-control-lg mb-2">
+                    </select>
+                    <button type="submit" class="btn btn-outline-success col-12" id="submit">Submit</button>
+                </form>
+            </div>
+            </div>
         </div>
     </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
 
